--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://youngmanalive.github.io",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@babel/core": "7.5.5",
     "@bandprotocol/bandchain.js": "^1.2.1",
@@ -16,7 +17,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.3",
-    "@sushiswap/sdk": "*",
+    "@sushiswap/sdk": "^5.0.0-canary.116",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -128,7 +129,8 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build"
+    "build": "react-app-rewired build",
+    "build-serve": "yarn run build && yarn serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -209,7 +211,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.12.1",
     "babel-eslint": "^10.0.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "http-server": "^14.1.1",
+    "serve": "^14.2.0"
   },
   "keywords": [],
   "description": ""
