--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5001",
+  "engines.node": "14.9.1",
   "dependencies": {
     "@babel/core": "7.5.5",
     "@bandprotocol/bandchain.js": "^1.2.1",
