--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "engines.node": "14.9.1",
+  "engines": {
+    "node": "14.9.x",
+    "npm": "6.14.x"
+  },
   "dependencies": {
     "@babel/core": "7.5.5",
     "@bandprotocol/bandchain.js": "^1.2.1",
