--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5001",
-  "engines.node": "14.9.1",
   "engines": {
     "node": "14.9.x",
-    "npm": "6.14.x"
+    "npm": "6.14.x",
+    "yarn": "1.22.x"
   },
   "dependencies": {
     "@babel/core": "7.5.5",
