--- a/package.json
+++ b/package.json
@@ -4,11 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5001",
-  "engines": {
-    "node": "14.9.x",
-    "npm": "6.14.x",
-    "yarn": "1.22.x"
-  },
   "dependencies": {
     "@babel/core": "7.5.5",
     "@bandprotocol/bandchain.js": "^1.2.1",
@@ -133,7 +128,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "npx serve -s build",
     "build": "react-app-rewired build",
     "build-serve": "yarn run build && yarn serve -s build",
     "local-serve": "yarn serve -s build"
