--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "homepage": "https://youngmanalive.github.io",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5001",
+  "engines": {
+    "node": "14.9.x",
+    "npm": "6.14.x",
+    "yarn": "1.22.x"
+  },
   "dependencies": {
     "@babel/core": "7.5.5",
     "@bandprotocol/bandchain.js": "^1.2.1",
